<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.psu.solitaire.GameActivity">
    <item android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        app:showAsAction="always"
        android:onClick="startHome"/>
    <item android:id="@+id/new_game"
        android:icon="@drawable/new_game"
        android:title="@string/new_game"
        app:showAsAction="ifRoom"
        android:onClick="startNewGame"/>
    <item android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:onClick="startSettings"/>

</menu>