<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B0588"
    android:id="@+id/home_screen"
    tools:context=".HomeActivity">

    <TextView
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/cardview_light_background"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toTopOf="@+id/cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />

    <ImageView
        android:id="@+id/cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cards"
        app:layout_constraintBottom_toTopOf="@+id/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"  />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/continue_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cards"
        android:onClick="startNewGame"/>

    <Button
        android:id="@+id/continue_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        app:layout_constraintBottom_toTopOf="@+id/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_game"
        android:onClick="startContinueGame"/>

    <ImageButton
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/continue_game"
        app:layout_constraintRight_toLeftOf="@id/settings"
        app:layout_constraintTop_toBottomOf="@id/continue_game"
        app:srcCompat="@drawable/stats_icon"
        android:onClick="startStats"/>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/stats"
        app:layout_constraintRight_toRightOf="@id/continue_game"
        app:layout_constraintTop_toTopOf="@id/stats"
        app:srcCompat="@drawable/settings_icon"
        android:onClick="startSettings"/>

</androidx.constraintlayout.widget.ConstraintLayout>